src/parser/GRAMMAR_BNF.txt
##
## GRAMMAR_BNF.txt for 42sh in /home/matteo/rendu/PSU_2015_42sh/src/parser
## 
## Made by Matteo
## Login   <matteo@epitech.net>
## 
## Started on  Wed Oct 19 14:06:22 2016 Matteo
## Last update Wed Oct 19 14:06:24 2016 Matteo
##

OPE_AND		  := &&
OPE_OR		  := ||
OPE_PIPE	  := |
OPE_LEFT	  := [< | <<]
OPE_RIGHT	  := [> | >>]
OPE_SEMI	  := ;
OPE_REDIR	  := [OPE_LEFT | OPE_RIGHT]
OPE_ALL		  := [OPE_AND | OPE_OR | OPE_PIPE | OPE_REDIR]
WORD		  := !OPE_ALL

S		  := exp
exp		  := or_exp
or_exp		  := and_exp [OPE_OR or_exp]?
and_exp		  := pipe_exp [OPE_AND and_exp]?
pipe_exp	  := redir_exp [OPE_PIPE pipe_exp]?
redir_exp	  := redir_left_norm | redir_left_spe
redir_left_norm	  := redir_right [OPE_LEFT redir_exp]?
redir_left_spe	  := OPE_LEFT file redir_exp
redir_right	  := redir_right_norm | redir_right_spe
redir_right_norm  := command [OPE_RIGHT file]?
redir_right_spe	  := OPE_RIGHT file command
command		  := cmd*
cmd		  := WORD
file		  := WORD
